errors.log
2025-08-09 00:02:01 ERROR Internal Server Error: /en/i18n/setlang/ C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\log.py
None
Traceback (most recent call last):
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\deprecation.py", line 119, in __call__
    response = self.process_request(request)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\middleware\locale.py", line 35, in process_request
    translation.activate(language)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\__init__.py", line 182, in activate
    return _trans.activate(language)
           ~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\trans_real.py", line 302, in activate
    _active.value = translation(language)
                    ~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\trans_real.py", line 291, in translation
    _translations[language] = DjangoTranslation(language)
                              ~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\trans_real.py", line 171, in __init__
    self._add_local_translations()
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\trans_real.py", line 231, in _add_local_translations
    translation = self._new_gnu_trans(localedir)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\translation\trans_real.py", line 198, in _new_gnu_trans
    return gettext_module.translation(
           ~~~~~~~~~~~~~~~~~~~~~~~~~~^
        domain=self.domain,
        ^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        fallback=use_null_fallback,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\kores\AppData\Local\Programs\Python\Python313\Lib\gettext.py", line 547, in translation
    t = _translations.setdefault(key, class_(fp))
                                      ~~~~~~^^^^
  File "C:\Users\kores\AppData\Local\Programs\Python\Python313\Lib\gettext.py", line 279, in __init__
    self._parse(fp)
    ~~~~~~~~~~~^^^^
  File "C:\Users\kores\AppData\Local\Programs\Python\Python313\Lib\gettext.py", line 370, in _parse
    raise OSError(0, 'Bad magic number', filename)
OSError: [Errno 0] Bad magic number: 'C:\\Users\\kores\\PycharmProjects\\NewSite\\NewsSite\\locale\\en\\LC_MESSAGES\\django.mo'
2025-08-09 00:02:01 ERROR "POST /en/i18n/setlang/ HTTP/1.1" 500 111277 C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\servers\basehttp.py
None
2025-08-11 19:02:37 ERROR Internal Server Error: /news/profile/ C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\utils\log.py
None
Traceback (most recent call last):
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 510, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'trans'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\news\views.py", line 49, in profile_view
    return render(request, 'profile.html')
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader_tags.py", line 299, in do_extends
    nodelist = parser.parse()
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 512, in parse
    self.invalid_block_tag(token, command, parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\template\base.py", line 567, in invalid_block_tag
    raise self.error(
    ...<8 lines>...
    )
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 28: 'trans', expected 'endblock'. Did you forget to register or load this tag?
2025-08-11 19:02:37 ERROR "GET /news/profile/ HTTP/1.1" 500 180175 C:\Users\kores\PycharmProjects\NewSite\NewsSite\venv\Lib\site-packages\django\core\servers\basehttp.py
None
